--- a/AplicacionCorredoresV2/nbproject/project.properties
+++ b/AplicacionCorredoresV2/nbproject/project.properties
@@ -29,7 +29,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.RelojCarrera.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +60,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.RelojCarrera=../RelojCarrera
+reference.RelojCarrera.jar=${project.RelojCarrera}/dist/RelojCarrera.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
